new api route for animals by zone
