# api/src/public/swagger.json
@@ -435,6 +435,32 @@
                 }
             }
         },
+        "/animals/zones/{id}": {
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "description": "Identifiant de la zone à rechercher",
+                    "type": "string"
+                }
+            ],
+            "get": {
+                "tags": ["Animals"],
+                "summary": "Obtenir tous les animaux d'une zone",
+                "responses": {
+                    "200": {
+                        "description": "Succès."
+                    },
+                    "400": {
+                        "description": "Syntaxe de la requête érronée."
+                    },
+                    "404": {
+                        "description": "Zone inconnue."
+                    }
+                }
+            }
+        },
         "/animals/out/{id}": {
             "parameters": [
                 {
